--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ARBeacon.xcodeproj/xcuserdata/setherickson.xcuserdatad/xcschemes/xcschememanagement.plist
 ARBeacon.xcodeproj/project.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
 ARBeacon.xcodeproj/project.pbxproj
+*.xcuserstate
