--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 .DS_Store
 ARBeacon.xcodeproj/xcuserdata/setherickson.xcuserdatad/xcschemes/xcschememanagement.plist
 ARBeacon.xcodeproj/project.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
+ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
 ARBeacon.xcodeproj/project.pbxproj
 *.xcuserstate
