--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ARBeacon.xcodeproj/xcuserdata/setherickson.xcuserdatad/xcschemes/xcschememanagem
 ARBeacon.xcodeproj/project.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
 ARBeacon.xcodeproj/project.pbxproj
 ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
