--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ ARBeacon.xcodeproj/project.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserI
 ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
 ARBeacon.xcodeproj/project.pbxproj
 *.xcuserstate
+ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
+ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
