ar covid model is live!

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@ ARBeacon.xcodeproj/project.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserI
 ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
 ARBeacon.xcodeproj/project.pbxproj
 *.xcuserstate
-ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
-*.xcuserstate
-ARBeacon.xcworkspace/xcuserdata/setherickson.xcuserdatad/UserInterfaceState.xcuserstate
+ARBeacon.xcodeproj
+ARBeacon.xcworkspace
