--- a/ARBeacon/Experience.rcproject/com.apple.RCFoundation.Project
+++ b/ARBeacon/Experience.rcproject/com.apple.RCFoundation.Project
@@ -109,7 +109,7 @@
                   0.1389566957950592,
                   0,
                   -0.73070567846298218,
-                  0.20909129083156586,
+                  0.20909130573272705,
                   -0.64988446235656738,
                   0,
                   -2.3810110092163086,
@@ -716,7 +716,7 @@
                           "bevelRadius",
                           {
                             "typeName" : "Double",
-                            "value" : 0.0035000000000000001
+                            "value" : 0.0034999999999999996
                           }
                         ],
                         [
@@ -802,7 +802,7 @@
                           "bevelRadius",
                           {
                             "typeName" : "Double",
-                            "value" : 0.0035000000000000001
+                            "value" : 0.0034999999999999996
                           }
                         ],
                         [
@@ -888,7 +888,7 @@
                           "bevelRadius",
                           {
                             "typeName" : "Double",
-                            "value" : 0.0034999999999999996
+                            "value" : 0.0034999999999999988
                           }
                         ],
                         [
@@ -974,7 +974,7 @@
                           "bevelRadius",
                           {
                             "typeName" : "Double",
-                            "value" : 0.0035000000000000001
+                            "value" : 0.0034999999999999996
                           }
                         ],
                         [
@@ -1601,6 +1601,274 @@
                   0,
                   0,
                   0.99999994039535522,
+                  0,
+                  0,
+                  0,
+                  0,
+                  1
+                ]
+              }
+            }
+          ],
+          "__version" : 5
+        },
+        {
+          "__content" : [
+            {
+              "arAnchorSpecification" : {
+                "name" : "image",
+                "physicalWidth" : 0.1266472190618515,
+                "url" : "image:dc9eabb33e9370bab4f24df63d378424\/Screen%20Shot%202021-11-27%20at%207.36.21%20PM.png"
+              },
+              "behaviors" : [
+                {
+                  "__content" : [
+                    {
+                      "accessibility" : {
+                        "__content" : [
+                          {
+                            "isEnabled" : false
+                          }
+                        ],
+                        "__version" : 1
+                      },
+                      "actionGroups" : [
+                        {
+                          "__content" : [
+                            {
+                              "configurations" : [
+                                {
+                                  "__content" : [
+                                    {
+                                      "configurationBox" : {
+                                        "configuration" : {
+                                          "animationSpeed" : 1,
+                                          "audioGain" : 1,
+                                          "clipDuration" : 0,
+                                          "clipStart" : 0,
+                                          "iterations" : 1,
+                                          "multiplePerformType" : "ignore request",
+                                          "muteAudio" : false,
+                                          "reversed" : false,
+                                          "reverses" : false,
+                                          "target" : [
+                                            "0728237C-2582-4601-8ECA-8E2198BBDF51"
+                                          ]
+                                        },
+                                        "name" : {
+                                          "type" : "startAnimate"
+                                        }
+                                      },
+                                      "identifier" : "9A1F6457-C044-4617-89C5-526075233254",
+                                      "isEnabled" : true
+                                    }
+                                  ],
+                                  "__version" : 1
+                                }
+                              ],
+                              "identifier" : "5677E7A1-9E10-486F-B1CA-72A40ACB9105",
+                              "isEnabled" : true
+                            }
+                          ],
+                          "__version" : 1
+                        }
+                      ],
+                      "color" : [
+                        0.364705890417099,
+                        0.74117648601531982,
+                        0.69019609689712524,
+                        1
+                      ],
+                      "identifier" : "AF6B27F4-33F9-429B-B47C-84B18B8945E4",
+                      "isEnabled" : true,
+                      "isLooping" : false,
+                      "isModal" : false,
+                      "name" : "Behavior",
+                      "triggers" : [
+                        {
+                          "__content" : [
+                            {
+                              "configurationBox" : {
+                                "configuration" : {
+                                  "target" : [
+                                    "0728237C-2582-4601-8ECA-8E2198BBDF51"
+                                  ]
+                                },
+                                "name" : "tapTarget"
+                              },
+                              "identifier" : "AF1FAD20-140F-45FF-95B2-B72AB5F8B850",
+                              "isEnabled" : true
+                            }
+                          ],
+                          "__version" : 1
+                        }
+                      ]
+                    }
+                  ],
+                  "__version" : 3
+                }
+              ],
+              "gravity" : [
+                0,
+                -9.8000001907348633,
+                0
+              ],
+              "identifier" : "24FB853B-E953-4125-9528-DBC829D419AE",
+              "material" : "concrete",
+              "overrides" : {
+                "children" : {
+                  "88BBDC7E-341C-446E-AF4B-F14E863CC884" : {
+                    "overrides" : {
+                      "children" : {
+                        "USDScene" : {
+                          "overrides" : {
+                            "arguments" : [
+                              [
+                                "includeSceneScaling",
+                                {
+                                  "typeName" : "Bool",
+                                  "value" : false
+                                }
+                              ],
+                              [
+                                "subpath",
+                                {
+                                  "typeName" : "String",
+                                  "value" : ""
+                                }
+                              ],
+                              [
+                                "url",
+                                {
+                                  "typeName" : "String",
+                                  "value" : "model:7578d34e301a237553b546a977a0f47e\/NeonXStickAni.usdz"
+                                }
+                              ],
+                              [
+                                "withDescendants",
+                                {
+                                  "typeName" : "Bool",
+                                  "value" : true
+                                }
+                              ]
+                            ],
+                            "factory" : {
+                              "identifier" : "com.apple.af.FileImportAssetFactory",
+                              "version" : "0.0"
+                            },
+                            "runtimeAttributes" : [
+                              [
+                                "RuntimeIdentifier",
+                                {
+                                  "typeName" : "UUID",
+                                  "value" : "879C9206-5E35-4DF3-AB96-094E70E035F3"
+                                }
+                              ]
+                            ]
+                          },
+                          "transform" : {
+                            "matrix" : [
+                              0.0099999997764825821,
+                              0,
+                              0,
+                              0,
+                              0,
+                              0.0099999997764825821,
+                              0,
+                              0,
+                              0,
+                              0,
+                              0.0099999997764825821,
+                              0,
+                              0,
+                              0,
+                              0,
+                              1
+                            ]
+                          }
+                        }
+                      },
+                      "factory" : {
+                        "identifier" : "com.apple.af.Group",
+                        "version" : "0.0"
+                      },
+                      "runtimeAttributes" : [
+                        [
+                          "RuntimeIdentifier",
+                          {
+                            "typeName" : "UUID",
+                            "value" : "0728237C-2582-4601-8ECA-8E2198BBDF51"
+                          }
+                        ]
+                      ]
+                    },
+                    "transform" : {
+                      "matrix" : [
+                        0.27523326873779297,
+                        0,
+                        0,
+                        0,
+                        0,
+                        0.27523323893547058,
+                        0,
+                        0,
+                        0,
+                        0,
+                        0.27523323893547058,
+                        0,
+                        0.0032956220675259829,
+                        0.19593776762485504,
+                        -2.8871002655250777e-07,
+                        1
+                      ]
+                    }
+                  },
+                  "Shape" : null
+                },
+                "factory" : null,
+                "runtimeAttributes" : [
+                  [
+                    "isAccessibilityEnabled",
+                    {
+                      "typeName" : "Bool",
+                      "value" : false
+                    }
+                  ]
+                ]
+              },
+              "physicsMode" : "grid",
+              "title" : "neon",
+              "viewTransform" : {
+                "cameraTransform" : [
+                  -0.98240268230438232,
+                  7.4505805969238281e-09,
+                  0.18677498400211334,
+                  0,
+                  0.032419543713331223,
+                  0.98482048511505127,
+                  0.17052119970321655,
+                  0,
+                  -0.18393966555595398,
+                  0.17357568442821503,
+                  -0.96749043464660645,
+                  0,
+                  -0.77765244245529175,
+                  0.11859917640686035,
+                  -5.4146003723144531,
+                  1
+                ],
+                "sceneTransform" : [
+                  1,
+                  0,
+                  0,
+                  0,
+                  0,
+                  1,
+                  0,
+                  0,
+                  0,
+                  0,
+                  1,
                   0,
                   0,
                   0,
